fix: URL-encode spaces in image filenames for Provo and Rural pages
- Fix srcset parsing errors by encoding spaces as %20
- Update Provo Utah, Provo Office 1/2/3, and Rural Sevier County Sunset images
- Resolves browser console warnings about failed srcset parsing

--- a/provo.html
+++ b/provo.html
@@ -93,9 +93,9 @@
     <!-- Hero Section -->
     <section class="service-hero">
         <picture>
-            <source srcset="assets/Provo Utah.avif" type="image/avif">
-            <source srcset="assets/Provo Utah.webp" type="image/webp">
-            <img src="assets/Provo Utah.jpg" alt="Provo, Utah office location" class="hero-image">
+            <source srcset="assets/Provo%20Utah.avif" type="image/avif">
+            <source srcset="assets/Provo%20Utah.webp" type="image/webp">
+            <img src="assets/Provo%20Utah.jpg" alt="Provo, Utah office location" class="hero-image">
         </picture>
         <div class="container">
             <h1>Provo Office</h1>
@@ -145,23 +145,23 @@
             <div class="photo-grid">
                 <div class="photo-item">
                     <picture>
-                        <source srcset="assets/Provo Office 1.avif" type="image/avif">
-                        <source srcset="assets/Provo Office 1.webp" type="image/webp">
-                        <img src="assets/Provo Office 1.jpg" alt="Welcoming Reception Area" class="placeholder-img">
+                        <source srcset="assets/Provo%20Office%201.avif" type="image/avif">
+                        <source srcset="assets/Provo%20Office%201.webp" type="image/webp">
+                        <img src="assets/Provo%20Office%201.jpg" alt="Welcoming Reception Area" class="placeholder-img">
                     </picture>
                 </div>
                 <div class="photo-item">
                     <picture>
-                        <source srcset="assets/Provo Office 2.avif" type="image/avif">
-                        <source srcset="assets/Provo Office 2.webp" type="image/webp">
-                        <img src="assets/Provo Office 2.jpg" alt="Comfortable Waiting Area" class="placeholder-img">
+                        <source srcset="assets/Provo%20Office%202.avif" type="image/avif">
+                        <source srcset="assets/Provo%20Office%202.webp" type="image/webp">
+                        <img src="assets/Provo%20Office%202.jpg" alt="Comfortable Waiting Area" class="placeholder-img">
                     </picture>
                 </div>
                 <div class="photo-item">
                     <picture>
-                        <source srcset="assets/Provo Office 3.avif" type="image/avif">
-                        <source srcset="assets/Provo Office 3.webp" type="image/webp">
-                        <img src="assets/Provo Office 3.jpg" alt="Private Consultation Room" class="placeholder-img">
+                        <source srcset="assets/Provo%20Office%203.avif" type="image/avif">
+                        <source srcset="assets/Provo%20Office%203.webp" type="image/webp">
+                        <img src="assets/Provo%20Office%203.jpg" alt="Private Consultation Room" class="placeholder-img">
                     </picture>
                 </div>
             </div>
