--- a/rural.html
+++ b/rural.html
@@ -150,9 +150,9 @@
     <!-- Service Hero Section -->
     <section class="service-hero">
         <picture>
-            <source srcset="assets/Rural Sevier County Sunset.avif" type="image/avif">
-            <source srcset="assets/Rural Sevier County Sunset.webp" type="image/webp">
-            <img src="assets/Rural Sevier County Sunset.jpg" alt="A sunset over a rural county, representing rural services" class="hero-image">
+            <source srcset="assets/Rural%20Sevier%20County%20Sunset.avif" type="image/avif">
+            <source srcset="assets/Rural%20Sevier%20County%20Sunset.webp" type="image/webp">
+            <img src="assets/Rural%20Sevier%20County%20Sunset.jpg" alt="A sunset over a rural county, representing rural services" class="hero-image">
         </picture>
         <div class="container">
             <h1>Mental Health Services for Rural Utah</h1>
