--- a/provo.html
+++ b/provo.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Visit our Provo, UT office for compassionate and expert mental health care. Dr. Todd Allen offers ADHD treatment, anxiety therapy, and more in a welcoming environment.">
+    <meta name="description" content="Visit our Provo, UT offices for compassionate and expert mental health care. Dr. Todd Allen offers ADHD treatment, anxiety therapy, and more in welcoming environments.">
     <meta name="keywords" content="Allen Psychiatry, Allen Mental Health, Provo psychiatrist, Provo mental health, psychiatric services Provo, mental health clinic Provo, psychiatrist near me Provo, mental health care Provo, ADHD treatment Provo, anxiety treatment Provo, depression treatment Provo, PTSD treatment Provo, psychiatric evaluation Provo, medication management Provo, mental health counseling Provo, psychiatric consultation Provo, mental wellness Provo, behavioral health Provo, compassionate mental health care, Utah County psychiatric care, local psychiatrist Provo">
-    <title>Provo, UT Office - Allen Psychiatry</title>
+    <title>Provo, UT Offices - Allen Psychiatry</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -66,7 +66,7 @@
                                 <li role="menuitem"><a href="/ptsd">PTSD Treatment</a></li>
                             </ul>
                         </li>
-                        <li><a href="/provo" class="active">Provo Office</a></li>
+                        <li><a href="/provo" class="active">Provo Offices</a></li>
                         <li><a href="/rural">Rural Services</a></li>
                         <li><a href="/about">About Us</a></li>
                         <li><a href="/telehealth">TeleHealth</a></li>
@@ -84,7 +84,7 @@
         <div class="container">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><span>Provo Office</span></li>
+                <li><span>Provo Offices</span></li>
             </ul>
         </div>
     </div>
@@ -98,8 +98,8 @@
             <img src="assets/Provo%20Utah.jpg" alt="Provo, Utah office location" class="hero-image">
         </picture>
         <div class="container">
-            <h1>Provo Office</h1>
-            <p>Visit our Provo office for in-person psychiatric care in a welcoming, comfortable environment.</p>
+            <h1>Provo Offices</h1>
+            <p>Visit our Provo offices for in-person psychiatric care in welcoming, comfortable environments.</p>
             <div class="hero-cta" style="margin-top: 30px;">
                 <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - Provo', 'value': 1});">Schedule In-Person Visit</a>
             </div>
@@ -172,10 +172,21 @@
     <section class="service-details">
         <div class="container">
             <div class="office-info-content">
-                <h2>Our Provo Office</h2>
-                <p class="location">3311 North University Ave, Ste 275, Provo, UT 84604</p>
+                <h2>Our Provo Offices</h2>
                 
-                <p class="intro-text">Welcome to our Provo office, where every detail has been carefully considered to create a healing environment. From the moment you step through our doors, you'll experience a space that balances professionalism with warmth and comfort.</p>
+                <p class="intro-text">Welcome to our Provo offices, where every detail has been carefully considered to create a healing environment. From the moment you step through our doors, you'll experience spaces that balance professionalism with warmth and comfort.</p>
+
+                <!-- First Location -->
+                <div class="office-location" style="margin-top: 30px; padding: 25px; background: var(--off-white); border-radius: var(--border-radius); margin-bottom: 30px;">
+                    <h3 style="margin-top: 0; color: var(--primary);">Main Office</h3>
+                    <p class="location" style="font-size: 1.1em; font-weight: 500; margin-bottom: 15px;">3311 North University Ave, Ste 275, Provo, UT 84604</p>
+                </div>
+
+                <!-- Second Location -->
+                <div class="office-location" style="margin-top: 30px; padding: 25px; background: var(--off-white); border-radius: var(--border-radius); margin-bottom: 30px;">
+                    <h3 style="margin-top: 0; color: var(--primary);">Allen Psychiatry - Physicians Plaza Office</h3>
+                    <p class="location" style="font-size: 1.1em; font-weight: 500; margin-bottom: 15px;">1055 N 300 W #308, Provo, UT 84604</p>
+                </div>
 
                 <div class="info-grid">
                     <div class="info-column">
@@ -229,7 +240,7 @@
         <div class="container">
             <div class="cta-content">
                 <h2>Ready to Take Your First Step?</h2>
-                <p>If you're ready to begin your journey toward mental wellness in our welcoming Provo office, Dr. Allen is here to help. Schedule a consultation to learn more about how we can support you.</p>
+                <p>If you're ready to begin your journey toward mental wellness in our welcoming Provo offices, Dr. Allen is here to help. Schedule a consultation to learn more about how we can support you.</p>
                 <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - Provo', 'value': 1});">Schedule an Appointment</a>
             </div>
         </div>
@@ -264,7 +275,7 @@
                         <li><a href="/">Home</a></li>
                         <li><a href="/about">About Us</a></li>
                         <li><a href="/#services">Services</a></li>
-                        <li><a href="/provo">Provo Office</a></li>
+                        <li><a href="/provo">Provo Offices</a></li>
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a></li>
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - Footer', 'value': 1});">Schedule Appointment</a></li>
                     </ul>
