Update Provo office hours and add schedule appointment modal
- Updated office hours: Mon/Wed/Thu/Fri 1-5 PM (in-person, Telehealth available), Tue 3-6 PM (TeleHealth only)
- Added schedule appointment modal with second Provo location announcement
- Updated location labels to match announcement (Jamestown Square and Physicians Plaza)
- Added office hours notice to TeleHealth page
- Created schedule-modal.js for popup functionality
- Added CSS styling for schedule modal with mobile responsiveness

--- a/provo.html
+++ b/provo.html
@@ -178,14 +178,15 @@
 
                 <!-- First Location -->
                 <div class="office-location" style="margin-top: 30px; padding: 25px; background: var(--off-white); border-radius: var(--border-radius); margin-bottom: 30px;">
-                    <h3 style="margin-top: 0; color: var(--primary);">Main Office</h3>
-                    <p class="location" style="font-size: 1.1em; font-weight: 500; margin-bottom: 15px;">3311 North University Ave, Ste 275, Provo, UT 84604</p>
+                    <h3 style="margin-top: 0; color: var(--primary);">Jamestown Square</h3>
+                    <p class="location" style="font-size: 1.1em; font-weight: 500; margin-bottom: 15px;">3311 N University Ave, Suite 275, Provo, Utah 84604</p>
                 </div>
 
                 <!-- Second Location -->
                 <div class="office-location" style="margin-top: 30px; padding: 25px; background: var(--off-white); border-radius: var(--border-radius); margin-bottom: 30px;">
-                    <h3 style="margin-top: 0; color: var(--primary);">Allen Psychiatry - Physicians Plaza Office</h3>
-                    <p class="location" style="font-size: 1.1em; font-weight: 500; margin-bottom: 15px;">1055 N 300 W #308, Provo, UT 84604</p>
+                    <h3 style="margin-top: 0; color: var(--primary);">Physicians Plaza</h3>
+                    <p class="location" style="font-size: 1.1em; font-weight: 500; margin-bottom: 15px;">1055 North 300 West, Suite 308, Provo, Utah 84604</p>
+                    <p style="font-size: 0.95em; color: var(--mid-gray); margin-top: 8px;">(next to Utah Valley Hospital)</p>
                 </div>
 
                 <div class="info-grid">
@@ -214,11 +215,10 @@
                 <div class="office-hours-section">
                     <h3>Office Hours</h3>
                     <ul class="hours-list">
-                        <li><strong>Monday, Wednesday - Friday:</strong> 10:00 AM - 6:00 PM</li>
-                        <li><strong>Tuesday:</strong> 11:00 AM - 6:00 PM</li>
-                        <li><strong>Sunday:</strong> Closed</li>
+                        <li><strong>Monday, Wednesday, Thursday, Friday:</strong> 1:00 PM - 5:00 PM (in-person appointments; Telehealth available, but Tuesday is prioritized for Telehealth)</li>
+                        <li><strong>Tuesday:</strong> 3:00 PM - 6:00 PM (TeleHealth only)</li>
                     </ul>
-                    <p class="hours-note">We offer flexible scheduling options to accommodate your needs, including early morning and evening appointments when available.</p>
+                    <p class="hours-note">To schedule an appointment at your preferred location, call or text us at 385-504-1334.</p>
                 </div>
 
                 <div class="first-visit-section">
@@ -317,5 +317,6 @@
     <script src="telehealth-modal.js"></script>
     <script src="patient-portal-modal.js"></script>
     <script src="sms-modal-simple.js"></script>
+    <script src="schedule-modal.js"></script>
 </body>
 </html> 
