--- a/telehealth.html
+++ b/telehealth.html
@@ -132,6 +132,15 @@
                     </div>
                 </div>
 
+                <div class="clinical-callout" style="background: var(--clinical-light-blue); border-left: 4px solid var(--primary); padding: 25px; margin: 30px 0; border-radius: var(--border-radius);">
+                    <h4 style="color: var(--primary); margin-top: 0;">TeleHealth Office Hours</h4>
+                    <ul style="margin: 15px 0; padding-left: 20px;">
+                        <li style="margin-bottom: 10px;"><strong>Monday, Wednesday, Thursday, Friday:</strong> 1:00 PM - 5:00 PM (in-person appointments; Telehealth available, but Tuesday is prioritized for Telehealth)</li>
+                        <li style="margin-bottom: 10px;"><strong>Tuesday:</strong> 3:00 PM - 6:00 PM (TeleHealth only)</li>
+                    </ul>
+                    <p style="margin-bottom: 0; font-size: 0.95em; color: var(--mid-gray);">To schedule a TeleHealth appointment, call or text us at <a href="tel:385-504-1334" style="color: var(--primary); font-weight: 600;">385-504-1334</a>.</p>
+                </div>
+
                 <h2>Our TeleHealth Services Include</h2>
                 <p>We offer comprehensive mental health services through our secure TeleHealth platform, ensuring you receive the same level of care as in-person visits.</p>
                 
