Make schedule modal global - add to all pages with schedule buttons

--- a/index.html
+++ b/index.html
@@ -745,5 +745,6 @@
     <script src="patient-portal-modal.js"></script>
     <script src="sms-modal-simple.js"></script>
     <script src="service-areas-modal.js"></script>
+    <script src="schedule-modal.js" defer></script>
 </body>
 </html> 
