--- a/telehealth.html
+++ b/telehealth.html
@@ -273,5 +273,6 @@
     <script src="patient-portal-modal.js"></script>
     <script src="sms-modal-simple.js"></script>
     <script src="appointment-clarification-modal.js"></script>
+    <script src="schedule-modal.js" defer></script>
 </body>
 </html> 
