--- a/ptsd.html
+++ b/ptsd.html
@@ -469,5 +469,6 @@
     <script src="telehealth-modal.js"></script>
     <script src="patient-portal-modal.js"></script>
     <script src="sms-modal-simple.js"></script>
+    <script src="schedule-modal.js" defer></script>
 </body>
 </html> 
