Add cache-busting version parameter to schedule-modal.js script tags

--- a/about.html
+++ b/about.html
@@ -282,6 +282,6 @@
     <script src="telehealth-modal.js"></script>
     <script src="patient-portal-modal.js"></script>
     <script src="sms-modal-simple.js"></script>
-    <script src="schedule-modal.js" defer></script>
+    <script src="schedule-modal.js?v=20250115" defer></script>
 </body>
 </html> 
