--- a/index.html
+++ b/index.html
@@ -745,6 +745,6 @@
     <script src="patient-portal-modal.js"></script>
     <script src="sms-modal-simple.js"></script>
     <script src="service-areas-modal.js"></script>
-    <script src="schedule-modal.js" defer></script>
+    <script src="schedule-modal.js?v=20250115" defer></script>
 </body>
 </html> 
