--- a/rural.html
+++ b/rural.html
@@ -337,6 +337,6 @@
     <script src="patient-portal-modal.js"></script>
     <script src="sms-modal-simple.js"></script>
     <script src="appointment-clarification-modal.js"></script>
-    <script src="schedule-modal.js" defer></script>
+    <script src="schedule-modal.js?v=20250115" defer></script>
 </body>
 </html> 
