Complete P0 SEO tasks: Add Accepting New Patients messaging, update homepage keywords, create Ketamine Therapy page, optimize ADHD/Depression pages

--- a/adhd.html
+++ b/adhd.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Primary Meta Tags -->
-    <title>ADHD Testing & Treatment Provo UT | Dr. Todd Allen | Allen Psychiatry</title>
-    <meta name="title" content="ADHD Testing & Treatment Provo UT | Dr. Todd Allen | Allen Psychiatry">
-    <meta name="description" content="Expert ADHD testing and treatment in Provo, UT. Dr. Todd Allen provides comprehensive ADHD evaluation, diagnosis, and medication management for adults and adolescents. Schedule your consultation today.">
+    <title>ADHD Psychiatrist Provo | ADHD Evaluation & Treatment | Accepting New Patients | Allen Psychiatry</title>
+    <meta name="title" content="ADHD Psychiatrist Provo | ADHD Evaluation & Treatment | Accepting New Patients | Allen Psychiatry">
+    <meta name="description" content="ADHD Psychiatrist in Provo & Orem. Comprehensive ADHD evaluation and treatment for adults and adolescents. Accepting new patients. Expert ADHD diagnosis and medication management. Schedule today.">
     <meta name="keywords" content="Allen Psychiatry, Allen Mental Health, ADHD testing Provo, ADHD treatment Orem, ADHD evaluation Lehi, ADHD testing Spanish Fork, ADHD treatment American Fork, ADHD evaluation Springville, ADHD testing Pleasant Grove, ADHD treatment Payson, ADHD evaluation Saratoga Springs, ADHD testing Eagle Mountain, ADHD treatment Utah County, adult ADHD diagnosis, ADHD medication management, psychiatrist Provo, mental health clinic near me, psychiatric services Utah County, ADHD treatment Sevier County, rural ADHD treatment Utah, mental health treatment, psychiatric evaluation, mental wellness, behavioral health, compassionate mental health care, mental health support, medication management, mental health counseling, psychiatric consultation, Provo mental health, Orem mental health, Lehi mental health, Spanish Fork mental health, American Fork mental health, Springville mental health, Pleasant Grove mental health, Payson mental health, Saratoga Springs mental health, Eagle Mountain mental health, Utah County psychiatric care">
     <meta name="author" content="Dr. Todd Allen, Allen Psychiatry">
     <meta name="robots" content="index, follow">
@@ -290,8 +290,9 @@
             <img src="assets/adhd2.jpg" alt="Professional ADHD evaluation and treatment consultation at Allen Psychiatry in Provo, Utah" class="hero-image">
         </picture>
         <div class="container">
-            <h1>ADHD Testing & Treatment</h1>
-            <p>Comprehensive care for adults and adolescents</p>
+            <h1>ADHD Psychiatrist in Provo & Orem | Comprehensive ADHD Evaluation</h1>
+            <p style="font-size: 1.1em; font-weight: 600; color: var(--primary); margin-bottom: 10px;">✓ Accepting New Patients</p>
+            <p>Comprehensive ADHD evaluation and treatment for adults and adolescents</p>
         </div>
     </section>
 
