--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <meta name="anthropic-ai" content="noindex, nofollow">
     <meta name="Claude-Web" content="noindex, nofollow">
     <meta name="PerplexityBot" content="noindex, nofollow">
-    <title>Allen Psychiatry | Compassionate Mental Health Care Provo & Rural Utah | Psychiatric Services</title>
-    <meta name="description" content="Expert psychiatric services in Provo, Utah County & Sevier County. ADHD, anxiety, depression, PTSD treatment. Serving rural communities with telehealth. Board-certified psychiatrist. Call (385) 504-1334">
+    <title>Allen Psychiatry | Provo & Orem Psychiatrist | Accepting New Patients | Depression, Anxiety, ADHD Treatment</title>
+    <meta name="description" content="Accepting New Patients! Expert depression, anxiety & ADHD treatment in Provo, Orem & Utah County. Ketamine therapy for treatment-resistant depression. Telehealth available. Call (385) 504-1334">
     <meta name="keywords" content="Allen Psychiatry, Allen Mental Health, Allen Psychiatric Services, Allen Mental Wellness, psychiatric services Provo, mental health care Utah County, psychiatrist Orem, mental health clinic near me, psychiatric services Lehi, mental health Spanish Fork, psychiatric care American Fork, mental wellness Springville, behavioral health Pleasant Grove, psychiatric services Payson, mental health Saratoga Springs, rural mental health Utah, telehealth psychiatry Utah, Sevier County psychiatric care, mental health treatment, psychiatric evaluation, mental wellness, behavioral health, holistic psychiatry, compassionate mental health care, mental health support, anxiety treatment, depression treatment, medication management, mental health counseling, psychiatric consultation, mental health professionals, local psychiatrist, Provo mental health, Orem mental health, Lehi mental health, Spanish Fork mental health, American Fork mental health, Springville mental health, Pleasant Grove mental health, Payson mental health, Saratoga Springs mental health, Eagle Mountain mental health, Lindon mental health, Mapleton mental health, Highland mental health, Alpine mental health, Salem mental health, Vineyard mental health, Cedar Hills mental health, Utah County psychiatric care, Sevier County psychiatric care">
     
     <!-- Open Graph / Facebook -->
@@ -441,6 +441,7 @@
                                 <li role="menuitem"><a href="/anxiety">Anxiety Treatment</a></li>
                                 <li role="menuitem"><a href="/depression">Depression Treatment</a></li>
                                 <li role="menuitem"><a href="/ptsd">PTSD Treatment</a></li>
+                                <li role="menuitem"><a href="/ketamine-therapy">Ketamine Therapy</a></li>
                             </ul>
                         </li>
                         <li><a href="/provo">Provo Office</a></li>
@@ -479,8 +480,9 @@
                         </picture>
         <div class="container">
             <div class="hero-content">
-                <h1>Expert Psychiatric Care in Utah County</h1>
-                <p>Compassionate, evidence-based mental health services for a brighter tomorrow.</p>
+                <h1>Expert Depression, Anxiety & ADHD Treatment in Provo & Utah County</h1>
+                <p style="font-size: 1.2em; font-weight: 600; color: var(--primary); margin-bottom: 15px;">✓ Accepting New Patients</p>
+                <p>Compassionate, evidence-based mental health services including ketamine therapy for treatment-resistant depression. Telehealth available for rural communities.</p>
                 <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - Hero', 'value': 1});">Schedule an Appointment</a>
             </div>
         </div>
@@ -491,7 +493,7 @@
         <div class="container">
             <div class="page-header">
                 <h2>Our Services</h2>
-                <p>Allen Psychiatry offers comprehensive mental health services tailored to your individual needs. Our experienced team provides evidence-based treatment in a supportive, confidential environment.</p>
+                <p><strong>Allen Psychiatry is currently accepting new patients</strong> throughout Provo, Orem, Lehi, American Fork, and rural Utah communities. We provide expert treatment for depression, anxiety, ADHD, PTSD, and treatment-resistant conditions, including innovative ketamine therapy. Telepsychiatry available for convenient access.</p>
             </div>
 
             <div class="services-grid">
@@ -554,6 +556,21 @@
                         <span class="btn">Learn More About PTSD Treatment</span>
                     </div>
                 </a>
+
+                <a href="/ketamine-therapy" class="service-card">
+                    <div class="service-img" data-service-name="Ketamine Therapy">
+                        <picture>
+                            <source srcset="assets/depression.avif" type="image/avif">
+                            <source srcset="assets/depression.webp" type="image/webp">
+                            <img src="assets/depression.jpg" alt="Ketamine therapy for treatment-resistant depression at Allen Psychiatry" loading="lazy" width="330" height="220">
+                        </picture>
+                    </div>
+                    <div class="service-content">
+                        <h3>Ketamine Therapy</h3>
+                        <p>Innovative ketamine therapy for treatment-resistant depression. Rapid relief when traditional antidepressants haven't worked. FDA-approved treatment option.</p>
+                        <span class="btn">Learn More About Ketamine Therapy</span>
+                    </div>
+                </a>
             </div>
 
             <!-- Service Area Section -->
@@ -600,6 +617,7 @@
                         <li><a href="/anxiety">Anxiety Treatment</a></li>
                         <li><a href="/depression">Depression Treatment</a></li>
                         <li><a href="/ptsd">PTSD Treatment</a></li>
+                        <li><a href="/ketamine-therapy">Ketamine Therapy</a></li>
                         <li><a href="/telehealth">TeleHealth Services</a></li>
                         <li><a href="/rural">Rural Services</a></li>
                     </ul>
