Add Accepting New Patients to all service pages, update Telehealth to Telepsychiatry terminology

--- a/anxiety.html
+++ b/anxiety.html
@@ -261,6 +261,7 @@
         </picture>
         <div class="container">
             <h1>Anxiety Treatment</h1>
+            <p style="font-size: 1.1em; font-weight: 600; color: var(--primary); margin-bottom: 10px;">✓ Accepting New Patients</p>
             <p>Expert care for anxiety, panic attacks, and related conditions</p>
         </div>
     </section>
