--- a/ptsd.html
+++ b/ptsd.html
@@ -265,6 +265,7 @@
         </picture>
         <div class="container">
             <h1>PTSD Treatment</h1>
+            <p style="font-size: 1.1em; font-weight: 600; color: var(--primary); margin-bottom: 10px;">✓ Accepting New Patients</p>
             <p>Specialized care for trauma survivors</p>
         </div>
     </section>
