--- a/telehealth.html
+++ b/telehealth.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Allen Psychiatry offers secure and convenient telehealth services, bringing expert mental health care to you, wherever you are in Utah." />
-    <meta name="keywords" content="Allen Psychiatry, Allen Mental Health, telehealth psychiatry Utah, online mental health appointments, virtual psychiatric services, telehealth mental health, remote psychiatric care, online therapy Utah, virtual mental health care, telehealth ADHD treatment, telehealth anxiety treatment, telehealth depression treatment, telehealth PTSD treatment, online psychiatric evaluation, telehealth medication management, mental health counseling online, psychiatric consultation telehealth, mental wellness telehealth, behavioral health telehealth, compassionate mental health care, secure telehealth, convenient mental health care, mental health treatment telehealth">
-    <title>Telehealth Services - Allen Psychiatry</title>
+    <meta name="description" content="Telepsychiatry Utah | Online Psychiatrist | Rural Mental Health. Accepting new patients. Secure online psychiatric care throughout Utah. Expert telepsychiatry for depression, anxiety, ADHD. Call (385) 504-1334" />
+    <meta name="keywords" content="Allen Psychiatry, telepsychiatry Utah, online psychiatrist, telehealth psychiatry Utah, online mental health appointments, virtual psychiatric services, telehealth mental health, remote psychiatric care, online therapy Utah, virtual mental health care, telehealth ADHD treatment, telehealth anxiety treatment, telehealth depression treatment, telehealth PTSD treatment, online psychiatric evaluation, telehealth medication management, mental health counseling online, psychiatric consultation telehealth, mental wellness telehealth, behavioral health telehealth, compassionate mental health care, secure telehealth, convenient mental health care, mental health treatment telehealth, rural mental health Utah">
+    <title>Telepsychiatry Utah | Online Psychiatrist | Rural Mental Health | Accepting New Patients | Allen Psychiatry</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -100,8 +100,9 @@
             <img src="assets/telehealth snowy-winter-landscape.jpg" alt="A snowy landscape representing telehealth services" class="hero-image">
         </picture>
         <div class="container">
-          <h1>TeleHealth Services</h1>
-          <p>Convenient and confidential mental health care from anywhere</p>
+          <h1>Telepsychiatry Throughout Utah | Online Psychiatric Care</h1>
+          <p style="font-size: 1.1em; font-weight: 600; color: var(--primary); margin-bottom: 10px;">✓ Accepting New Patients</p>
+          <p>Convenient and confidential online psychiatric care from anywhere in Utah</p>
           <div class="hero-cta" style="margin-top: 30px;">
             <a href="#" class="btn" onclick="showAppointmentClarification(); return false;">Schedule Appointment</a>
           </div>
