Reframe ketamine therapy page as educational resource, add FAQs to depression page, update homepage with educational link

--- a/index.html
+++ b/index.html
@@ -557,20 +557,13 @@
                     </div>
                 </a>
 
-                <a href="/ketamine-therapy" class="service-card">
-                    <div class="service-img" data-service-name="Ketamine Therapy">
-                        <picture>
-                            <source srcset="assets/depression.avif" type="image/avif">
-                            <source srcset="assets/depression.webp" type="image/webp">
-                            <img src="assets/depression.jpg" alt="Ketamine therapy for treatment-resistant depression at Allen Psychiatry" loading="lazy" width="330" height="220">
-                        </picture>
-                    </div>
-                    <div class="service-content">
-                        <h3>Ketamine Therapy</h3>
-                        <p>Innovative ketamine therapy for treatment-resistant depression. Rapid relief when traditional antidepressants haven't worked. FDA-approved treatment option.</p>
-                        <span class="btn">Learn More About Ketamine Therapy</span>
-                    </div>
-                </a>
+            </div>
+
+            <!-- Educational Resource Section -->
+            <div style="margin-top: 50px; padding: 30px; background: #f8f9fa; border-radius: var(--border-radius); border-left: 4px solid var(--primary);">
+                <h3 style="color: var(--primary); margin-top: 0;">Exploring Treatment Options</h3>
+                <p>If you've tried multiple antidepressant medications without sufficient relief, you may be interested in learning about additional treatment options. Ketamine therapy is one approach that can be explored with Dr. Allen for treatment-resistant depression.</p>
+                <p style="margin-top: 15px;"><a href="/ketamine-therapy" class="btn btn-outline" style="display: inline-block;">If you would like to learn more about Ketamine treatment</a></p>
             </div>
 
             <!-- Service Area Section -->
