Update navbar dropdown to show 4 main services, add ketamine educational section to PTSD page

--- a/ptsd.html
+++ b/ptsd.html
@@ -356,6 +356,15 @@
                         <p>With proper treatment, most people with PTSD experience significant improvement in their symptoms and quality of life. Early intervention and ongoing support are key to long-term recovery. Remember, healing from trauma is possible, and you don't have to face it alone.</p>
                     </div>
 
+                    <h3>Exploring Additional Treatment Options</h3>
+                    <p>If you've tried multiple treatment approaches for PTSD without sufficient relief, there are additional options that can be explored with Dr. Allen. For some individuals with treatment-resistant PTSD, ketamine therapy is one option that may be considered as part of a comprehensive treatment plan.</p>
+                    
+                    <div class="clinical-callout" style="background: #f8f9fa; border-left: 4px solid var(--primary); padding: 25px; margin: 30px 0;">
+                        <h4 style="color: var(--primary); margin-top: 0;">Understanding Your Treatment Options</h4>
+                        <p><strong>Ketamine Therapy:</strong> For individuals with treatment-resistant PTSD, ketamine therapy is one option that can be explored with Dr. Allen. While primarily researched for treatment-resistant depression, emerging research suggests ketamine may also be helpful for some individuals with PTSD, particularly when traditional treatments haven't provided sufficient relief. However, it's just one of many treatment options available, and Dr. Allen can help you understand whether it or other approaches might be appropriate for your specific situation.</p>
+                        <p style="margin-top: 15px;"><a href="/ketamine-therapy" class="btn btn-outline" style="display: inline-block;">If you would like to learn more about Ketamine treatment</a></p>
+                    </div>
+
                     <h3>What to Expect During Treatment</h3>
                     <p>Your journey toward healing begins with a comprehensive evaluation and continues with ongoing support and monitoring:</p>
                     
