Fix navbar dropdown hover functionality and standardize 'Provo Offices' (plural) across all pages

--- a/ptsd.html
+++ b/ptsd.html
@@ -232,7 +232,7 @@
                                 <li role="menuitem"><a href="/ptsd">PTSD Treatment</a></li>
                             </ul>
                         </li>
-                        <li><a href="/provo">Provo Office</a></li>
+                        <li><a href="/provo">Provo Offices</a></li>
                         <li><a href="/rural">Rural Services</a></li>
                         <li><a href="/about">About Us</a></li>
                         <li><a href="/telehealth">TeleHealth</a></li>
@@ -433,7 +433,7 @@
                         <li><a href="/">Home</a></li>
                         <li><a href="/about">About Us</a></li>
                         <li><a href="/#services">Services</a></li>
-                        <li><a href="/provo">Provo Office</a></li>
+                        <li><a href="/provo">Provo Offices</a></li>
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a></li>
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">Schedule Appointment</a></li>
                     </ul>
