--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
                     <ul>
                         <li><a href="index">Home</a></li>
                         <li><a href="index#services">Services</a></li>
-                        <li><a href="index#provo-services">Provo Office</a></li>
+                        <li><a href="index#provo-services">Provo Offices</a></li>
                         <li><a href="index#rural-services">Rural Services</a></li>
                         <li><a href="index#about">About Us</a></li>
                         <li><a href="index#telehealth">TeleHealth</a></li>
