Add schedule_appointment_click tracking to all missing schedule buttons and links - ensures every schedule click is tracked

--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="header-actions">
                     <a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a>
-                    <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn-small">Schedule Now</a>
+                    <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn-small" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - 404 Header', 'value': 1});">Schedule Now</a>
                 </div>
             </div>
         </div>
