--- a/ptsd.html
+++ b/ptsd.html
@@ -390,7 +390,7 @@
                         <strong>Phone:</strong> <a href="tel:+13855041334" onclick="gtag('event', 'phone_call_click', {'event_category': 'Conversion', 'event_label': 'Phone Call - Footer', 'value': 1});">(385) 504-1334</a><br>
                         <strong>Parking:</strong> Free parking available on-site</p>
                         
-                        <p>Whether you're looking for PTSD treatment in Provo, trauma therapy in Orem, or PTSD care in Lehi, Allen Psychiatry is here to help. <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">Schedule your appointment today</a>.</p>
+                        <p>Whether you're looking for PTSD treatment in Provo, trauma therapy in Orem, or PTSD care in Lehi, Allen Psychiatry is here to help. <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Link - PTSD Inline Text', 'value': 1});">Schedule your appointment today</a>.</p>
                     </div>
                 </div>
             </div>
@@ -435,7 +435,7 @@
                         <li><a href="/#services">Services</a></li>
                         <li><a href="/provo">Provo Offices</a></li>
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a></li>
-                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">Schedule Appointment</a></li>
+                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - Footer', 'value': 1});">Schedule Appointment</a></li>
                     </ul>
                 </div>
 
