--- a/rural.html
+++ b/rural.html
@@ -158,7 +158,7 @@
             <h1>Mental Health Services for Rural Utah</h1>
             <p>Bringing compassionate psychiatric care to Utah's rural communities</p>
             <div class="hero-cta" style="margin-top: 30px;">
-                <a href="#" class="btn" onclick="showAppointmentClarification(); return false;">Schedule Appointment</a>
+                <a href="#" class="btn" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - Rural Hero', 'value': 1}); showAppointmentClarification(); return false;">Schedule Appointment</a>
             </div>
         </div>
     </section>
