--- a/telehealth.html
+++ b/telehealth.html
@@ -104,7 +104,7 @@
           <p style="font-size: 1.1em; font-weight: 600; color: var(--primary); margin-bottom: 10px;">✓ Accepting New Patients</p>
           <p>Convenient and confidential online psychiatric care from anywhere in Utah</p>
           <div class="hero-cta" style="margin-top: 30px;">
-            <a href="#" class="btn" onclick="showAppointmentClarification(); return false;">Schedule Appointment</a>
+            <a href="#" class="btn" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - Telehealth Hero', 'value': 1}); showAppointmentClarification(); return false;">Schedule Appointment</a>
           </div>
         </div>
       </section>
